@@ -21,6 +21,7 @@ Changes Since 0.9.1
   - Dropped support for Python 2.3.
   - ``docutils/math``, ``docutils/error_reporting.py``, and
     ``docutils/urischemes.py`` moved to the utils package.
+  - Fix [3541369] Relative __import__ also with Python 3.3.
 
 * docutils/io.py
 
